@@ -1,3 +1,8 @@
+2010-07-09  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Components/SearchEntry.cs: taken out event
+	  handler on destroy.
+
 2010-07-05  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
